[gd_scene load_steps=14 format=3 uid="uid://daov3645d55tu"]

[ext_resource type="Script" path="res://assets/interactives/scripts/vending_machine.gd" id="1_5kg2c"]
[ext_resource type="PackedScene" uid="uid://b4u85bfprv2eu" path="res://assets/collectibles/soda.tscn" id="2_g1rfp"]
[ext_resource type="Texture2D" uid="uid://b36r3j4yxiama" path="res://assets/interactives/Sprites/Soda.png" id="2_gq7ho"]

[sub_resource type="Animation" id="Animation_u4ya6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ibn3e"]
resource_name = "dispense"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"drink"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bunh8"]
_data = {
"RESET": SubResource("Animation_u4ya6"),
"dispense": SubResource("Animation_ibn3e")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_q4wab"]
size = Vector3(0.576843, 1, 0.436462)

[sub_resource type="AtlasTexture" id="AtlasTexture_60dgw"]
atlas = ExtResource("2_gq7ho")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw2fo"]
atlas = ExtResource("2_gq7ho")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_58f0t"]
atlas = ExtResource("2_gq7ho")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7adg"]
atlas = ExtResource("2_gq7ho")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_q47rc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60dgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw2fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58f0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7adg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_corqm"]
size = Vector3(1, 0.942627, 0.69812)

[node name="VendingMachine" type="Node3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
script = ExtResource("1_5kg2c")
soda = ExtResource("2_g1rfp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bunh8")
}

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0242615, 0, 0.0218811)
shape = SubResource("BoxShape3D_q4wab")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="StaticBody3D"]
sprite_frames = SubResource("SpriteFrames_q47rc")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0286865, 0.231873)
shape = SubResource("BoxShape3D_corqm")

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_distance = 50.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
